--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
 
+  <link rel="icon" href="logo.png">
+
 <title>Dixit Labs</title>
 
 <style>
@@ -165,5 +167,6 @@ PLAY NOW
 </footer>
 
 </body>
+
 
 </html>
