--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ DIXIT LABS 🚀
 
 <p class="tag">
 
-Interactive experiments by Atharv Dixit
+Made in India By Atharv Dixit (Student Developer)
 
 </p>
 
@@ -170,3 +170,4 @@ PLAY NOW
 
 
 </html>
+
