--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
 
+  <meta name="description" content="Dixit Labs — fun Indian browser games and interactive experiments including GrossDumpster, built by student developer Atharv Dixit.">
+
+<meta name="keywords" content="browser games India, free online games, GrossDumpster game, Dixit Labs, Indian web experiments">
+
+<meta name="author" content="Atharv Dixit">
+
   <link rel="icon" href="logo.png">
 
 <title>Dixit Labs</title>
@@ -170,4 +176,5 @@ PLAY NOW
 
 
 </html>
+
 
