--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
 
 <style>
 
+  .card:nth-child(2){
+
+border:2px solid #38bdf8;
+
+animation:pulse 2s infinite;
+
+}
+
+@keyframes pulse{
+
+0%{box-shadow:0 0 10px #38bdf8;}
+
+50%{box-shadow:0 0 25px #38bdf8;}
+
+100%{box-shadow:0 0 10px #38bdf8;}
+
+}
+
 body{
 
 margin:0;
@@ -56,6 +74,12 @@ opacity:.7;
 }
 
 .projects{
+
+  <h2>About</h2>
+
+<p>
+Hi! I'm Atharv Dixit — a student developer building fun browser games and experiments for the internet 🇮🇳.
+</p>
 
 display:flex;
 
@@ -145,6 +169,23 @@ Made in India By Atharv Dixit (Student Developer)
 
 <div class="projects">
 
+  <div class="card">
+
+<h3>Next Experiment 👀</h3>
+
+<p>
+Something chaotic is cooking in Dixit Labs...
+New interactive project arriving soon.
+</p>
+
+<button onclick="alert('Coming Soon 👀 Stay Tuned!')">
+
+COMING SOON
+
+</button>
+
+</div>
+
 <div class="card">
 
 <h3>GrossDumpster 🗑️</h3>
@@ -176,5 +217,6 @@ PLAY NOW
 
 
 </html>
+
 
 
