--- a/index.html
+++ b/index.html
@@ -204,6 +204,10 @@ PLAY NOW
 
 </div>
 
+  <button onclick="location.href='ambani.html'">
+PLAY NOW 💸
+</button>
+  
 </div>
 
 
@@ -217,6 +221,7 @@ PLAY NOW
 
 
 </html>
+
 
 
 
