--- a/index.html
+++ b/index.html
@@ -186,6 +186,30 @@ COMING SOON
 
 </div>
 
+  <div class="card">
+
+<h3>💸 Spend Mukesh's Money</h3>
+
+<p>
+Spend insane money on crazy stuff.
+Can you actually finish it?
+</p>
+
+<button onclick="location.href='ambani.html'">
+
+PLAY NOW
+
+</button>
+
+<div class="fakeTweet">
+
+@startupbro:
+"I bought 3 islands and still had money left 😭"
+
+</div>
+
+</div>
+
 <div class="card">
 
 <h3>GrossDumpster 🗑️</h3>
@@ -203,10 +227,6 @@ PLAY NOW
 </button>
 
 </div>
-
-  <button onclick="location.href='ambani.html'">
-PLAY NOW 💸
-</button>
   
 </div>
 
@@ -221,6 +241,7 @@ PLAY NOW 💸
 
 
 </html>
+
 
 
 
