--- a/index.html
+++ b/index.html
@@ -1,312 +1,278 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-
-  <link rel="icon" href="logo.png">
-
-  <meta name="description" content="Dixit Labs — fun Indian browser games and interactive experiments including GrossDumpster, built by student developer Atharv Dixit.">
-
-<meta name="keywords" content="browser games India, free online games, GrossDumpster game, Dixit Labs, Indian web experiments">
-
-<meta name="author" content="Atharv Dixit">
-
-  <link rel="icon" href="logo.png">
-
-<title>Dixit Labs</title>
-
-<style>
-
-  .card:nth-child(2){
-
-border:2px solid #38bdf8;
-
-animation:pulse 2s infinite;
-
-}
-
-@keyframes pulse{
-
-0%{box-shadow:0 0 10px #38bdf8;}
-
-50%{box-shadow:0 0 25px #38bdf8;}
-
-100%{box-shadow:0 0 10px #38bdf8;}
-
-}
-
-body{
-
-margin:0;
-font-family:Arial;
-background:#020617;
-color:white;
-text-align:center;
-
-}
-
-header{
-
-padding:40px;
-background:black;
-
-}
-
-.logo{
-
-font-size:45px;
-font-weight:bold;
-color:#38bdf8;
-
-animation:glow 2s infinite alternate;
-
-}
-
-@keyframes glow{
-
-from{ text-shadow:0 0 10px #38bdf8;}
-to{ text-shadow:0 0 25px #22d3ee;}
-
-}
-
-.tag{
-
-opacity:.7;
-
-}
-
-.projects{
-
-  <h2>About</h2>
-
-<p>
-Hi! I'm Atharv Dixit — a student developer building fun browser games and experiments for the internet 🇮🇳.
-</p>
-
-display:flex;
-
-justify-content:center;
-
-flex-wrap:wrap;
-
-gap:30px;
-
-padding:40px;
-
-}
-
-.card{
-
-background:#111827;
-
-padding:20px;
-
-border-radius:15px;
-
-width:260px;
-
-transition:.3s;
-
-box-shadow:0 0 10px rgba(0,0,0,.5);
-
-}
-
-.card:hover{
-
-transform:translateY(-10px);
-
-box-shadow:0 0 25px #38bdf8;
-
-}
-
-button{
-
-background:#22c55e;
-
-border:none;
-
-padding:12px 15px;
-
-border-radius:10px;
-
-cursor:pointer;
-
-font-weight:bold;
-
-}
-
-footer{
-
-opacity:.5;
-
-padding:20px;
-
-}
-
-</style>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="logo.png">
+    <meta name="description" content="Dixit Labs — fun Indian browser games and interactive experiments including GrossDumpster, built by student developer Atharv Dixit.">
+    <meta name="keywords" content="browser games India, free online games, GrossDumpster game, Dixit Labs, Indian web experiments">
+    <meta name="author" content="Atharv Dixit">
+    <title>Dixit Labs | Interactive Playground</title>
+
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@300;500&display=swap" rel="stylesheet">
+
+    <style>
+        :root {
+            --bg: #020617;
+            --primary: #38bdf8;
+            --accent: #22d3ee;
+            --hazard: #f59e0b;
+            --card-bg: rgba(17, 24, 39, 0.8);
+        }
+
+        body {
+            margin: 0;
+            font-family: 'Inter', sans-serif;
+            background: var(--bg);
+            background-image: 
+                radial-gradient(circle at 50% 50%, #1e293b 0%, #020617 100%),
+                linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
+                linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
+            background-size: 100%, 100% 4px, 3px 100%;
+            color: white;
+            overflow-x: hidden;
+            min-height: 100vh;
+        }
+
+        /* Scanline Overlay Effect */
+        body::before {
+            content: " ";
+            display: block;
+            position: fixed;
+            top: 0; left: 0; bottom: 0; right: 0;
+            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 255, 0, 0.03));
+            z-index: 10;
+            pointer-events: none;
+            background-size: 100% 2px, 3px 100%;
+        }
+
+        header {
+            padding: 80px 20px 40px;
+            background: radial-gradient(circle at top, rgba(56, 189, 248, 0.15) 0%, transparent 70%);
+        }
+
+        .logo {
+            font-family: 'Orbitron', sans-serif;
+            font-size: clamp(2.5rem, 8vw, 4rem);
+            font-weight: 900;
+            color: white;
+            letter-spacing: 5px;
+            text-transform: uppercase;
+            position: relative;
+            display: inline-block;
+            animation: glitch 3s infinite;
+        }
+
+        @keyframes glitch {
+            0% { text-shadow: 2px 0 var(--primary), -2px 0 #ff00c1; }
+            2% { text-shadow: 5px 0 var(--primary), -5px 0 #ff00c1; }
+            4% { text-shadow: 2px 0 var(--primary), -2px 0 #ff00c1; }
+            100% { text-shadow: 2px 0 var(--primary), -2px 0 #ff00c1; }
+        }
+
+        .tag {
+            opacity: 0.8;
+            font-size: 0.9rem;
+            letter-spacing: 2px;
+            margin-top: 10px;
+            color: var(--primary);
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .section-title {
+            font-family: 'Orbitron', sans-serif;
+            text-align: left;
+            border-left: 4px solid var(--primary);
+            padding-left: 15px;
+            margin-bottom: 30px;
+        }
+
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 25px;
+            padding: 20px 0;
+        }
+
+        .card {
+            background: var(--card-bg);
+            border: 1px solid rgba(255,255,255,0.1);
+            border-radius: 20px;
+            padding: 30px;
+            position: relative;
+            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            backdrop-filter: blur(10px);
+            overflow: hidden;
+            text-align: left;
+        }
+
+        .card:hover {
+            transform: translateY(-10px) scale(1.02);
+            border-color: var(--primary);
+            box-shadow: 0 0 30px rgba(56, 189, 248, 0.3);
+        }
+
+        /* Specific style for GrossDumpster */
+        .card.featured {
+            border: 1px solid var(--hazard);
+        }
+        .card.featured:hover {
+            box-shadow: 0 0 30px rgba(245, 158, 11, 0.3);
+            border-color: var(--hazard);
+        }
+
+        .card h3 {
+            font-family: 'Orbitron', sans-serif;
+            margin-top: 0;
+            color: var(--primary);
+        }
+
+        .card p {
+            font-size: 0.95rem;
+            line-height: 1.6;
+            color: #94a3b8;
+        }
+
+        .btn {
+            background: white;
+            color: black;
+            border: none;
+            padding: 12px 24px;
+            border-radius: 8px;
+            font-family: 'Orbitron', sans-serif;
+            font-weight: bold;
+            font-size: 0.8rem;
+            cursor: pointer;
+            transition: 0.3s;
+            text-transform: uppercase;
+            width: 100%;
+            margin-top: 15px;
+        }
+
+        .btn:hover {
+            background: var(--primary);
+            color: white;
+            box-shadow: 0 0 15px var(--primary);
+        }
+
+        .btn-featured {
+            background: var(--hazard);
+            color: black;
+        }
+
+        .fakeTweet {
+            font-size: 0.8rem;
+            background: rgba(0,0,0,0.3);
+            padding: 10px;
+            border-radius: 8px;
+            margin-top: 15px;
+            border-left: 2px solid #38bdf8;
+            font-style: italic;
+        }
+
+        /* Intro Animation Overhaul */
+        #dixlabsIntro {
+            position: fixed;
+            top: 0; left: 0; width: 100%; height: 100%;
+            background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 99999;
+        }
+
+        #dixlabsLogo {
+            width: 180px;
+            filter: drop-shadow(0 0 20px var(--primary));
+            animation: introAnim 2.5s ease-in-out forwards;
+        }
+
+        @keyframes introAnim {
+            0% { opacity: 0; transform: scale(0.8) rotate(-5deg); filter: blur(20px); }
+            50% { opacity: 1; transform: scale(1.1) rotate(0deg); filter: blur(0px); }
+            100% { opacity: 0; transform: scale(1.2); filter: blur(10px); }
+        }
+
+        footer {
+            padding: 60px 20px;
+            font-family: 'Orbitron', sans-serif;
+            font-size: 0.7rem;
+            letter-spacing: 4px;
+            text-transform: uppercase;
+            opacity: 0.4;
+        }
+    </style>
 </head>
-
 
 <body>
 
-  <!-- DixLabs Intro -->
 <div id="dixlabsIntro">
-
-<img src="logo.png" id="dixlabsLogo">
-
+    <img src="logo.png" id="dixlabsLogo" alt="Dixit Labs">
 </div>
-
-<style>
-
-#dixlabsIntro{
-position:fixed;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background:black;
-display:flex;
-justify-content:center;
-align-items:center;
-z-index:99999;
-}
-
-#dixlabsLogo{
-width:230px;
-opacity:0;
-animation:dixintro 2.5s ease forwards;
-}
-
-@keyframes dixintro{
-
-0%{
-opacity:0;
-transform:scale(0.6);
-filter:blur(10px);
-}
-
-50%{
-opacity:1;
-transform:scale(1.15);
-filter:drop-shadow(0 0 30px white);
-}
-
-100%{
-opacity:1;
-transform:scale(1);
-}
-
-}
-
-</style>
-
-<script>
-
-setTimeout(()=>{
-
-document.getElementById("dixlabsIntro").style.display="none";
-
-},3000);
-
-</script>
 
 <header>
-
-<div class="logo">
-
-DIXIT LABS 🚀
-
-</div>
-
-<p class="tag">
-
-Made in India By Atharv Dixit (Student Developer)
-
-</p>
-
+    <div class="logo">DIXIT LABS</div>
+    <p class="tag">EST. 2024 // ATHARV DIXIT // STUDENT DEVELOPER 🇮🇳</p>
 </header>
 
+<div class="container">
+    
+    <div class="section-title">
+        <h2>MISSION_LOG</h2>
+    </div>
+    <div style="text-align: left; max-width: 600px; margin-bottom: 50px;">
+        <p style="color: #94a3b8; font-size: 1.1rem;">
+            Hello Player 1. I'm <strong>Atharv Dixit</strong>. I craft chaotic browser experiences, 
+            interactive experiments, and digital junk. Welcome to my laboratory.
+        </p>
+    </div>
 
-<h2>Projects</h2>
+    <div class="section-title">
+        <h2>ACTIVE_PROJECTS</h2>
+    </div>
 
-<div class="projects">
+    <div class="projects-grid">
+        <div class="card">
+            <h3>💸 Spend Mukesh's Money</h3>
+            <p>You have billions. The world has stuff. Can you actually spend it all or will the interest beat you?</p>
+            <div class="fakeTweet">
+                @startupbro: "I bought 3 islands and still had money left 😭"
+            </div>
+            <button class="btn" onclick="location.href='ambani.html'">Initialize Game</button>
+        </div>
 
-  <div class="card">
+        <div class="card featured">
+            <h3 style="color: var(--hazard);">🗑️ GrossDumpster</h3>
+            <p>The ultimate physics-based trash catching simulator. Fast-paced, addictive, and slightly unhygienic.</p>
+            <button class="btn btn-featured" onclick="window.location.href='https://grossdumpster.vercel.app'">Launch Site</button>
+        </div>
 
-<h3>Next Experiment 👀</h3>
-
-<p>
-Something chaotic is cooking in Dixit Labs...
-New interactive project arriving soon.
-</p>
-
-<button onclick="alert('Coming Soon 👀 Stay Tuned!')">
-
-COMING SOON
-
-</button>
-
-</div>
-
-  <div class="card">
-
-<h3>💸 Spend Mukesh's Money</h3>
-
-<p>
-Spend insane money on crazy stuff.
-Can you actually finish it?
-</p>
-
-<button onclick="location.href='ambani.html'">
-
-PLAY NOW
-
-</button>
-
-<div class="fakeTweet">
-
-@startupbro:
-"I bought 3 islands and still had money left 😭"
+        <div class="card" style="opacity: 0.8; border-style: dashed;">
+            <h3>👀 Next Experiment</h3>
+            <p>Something chaotic is cooking in the labs. A new interactive project is currently under construction.</p>
+            <button class="btn" style="background: transparent; color: white; border: 1px solid white;" onclick="alert('Coming Soon 👀 Stay Tuned!')">SYSTEM_ENCRYPTED</button>
+        </div>
+    </div>
 
 </div>
-
-</div>
-
-<div class="card">
-
-<h3>GrossDumpster 🗑️</h3>
-
-<p>
-
-Catch trash before it hits the ground!
-
-</p>
-
-<button onclick="window.location.href='https://grossdumpster.vercel.app'">
-
-PLAY NOW
-
-</button>
-
-</div>
-  
-</div>
-
 
 <footer>
-
-© Dixit Labs
-
+    © 2026 DIXIT LABS — ALL RIGHTS RESERVED
 </footer>
 
+<script>
+    setTimeout(() => {
+        document.getElementById("dixlabsIntro").style.opacity = "0";
+        setTimeout(() => {
+            document.getElementById("dixlabsIntro").style.display = "none";
+        }, 500);
+    }, 2500);
+</script>
+
 </body>
-
-
 </html>
-
-
-
-
-
-
