--- a/index.html
+++ b/index.html
@@ -17,261 +17,188 @@
             --primary: #38bdf8;
             --accent: #22d3ee;
             --hazard: #f59e0b;
-            --card-bg: rgba(17, 24, 39, 0.8);
+            --card-bg: rgba(17, 24, 39, 0.7);
         }
 
         body {
             margin: 0;
             font-family: 'Inter', sans-serif;
             background: var(--bg);
-            background-image: 
-                radial-gradient(circle at 50% 50%, #1e293b 0%, #020617 100%),
-                linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%),
-                linear-gradient(90deg, rgba(255, 0, 0, 0.06), rgba(0, 255, 0, 0.02), rgba(0, 0, 255, 0.06));
-            background-size: 100%, 100% 4px, 3px 100%;
+            background-image: radial-gradient(circle at 50% 50%, #0f172a 0%, #020617 100%);
             color: white;
             overflow-x: hidden;
             min-height: 100vh;
         }
 
-        /* Scanline Overlay Effect */
-        body::before {
-            content: " ";
-            display: block;
-            position: fixed;
-            top: 0; left: 0; bottom: 0; right: 0;
-            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 255, 0, 0.03));
-            z-index: 10;
-            pointer-events: none;
-            background-size: 100% 2px, 3px 100%;
-        }
-
-        header {
-            padding: 80px 20px 40px;
-            background: radial-gradient(circle at top, rgba(56, 189, 248, 0.15) 0%, transparent 70%);
-        }
-
-        .logo {
-            font-family: 'Orbitron', sans-serif;
-            font-size: clamp(2.5rem, 8vw, 4rem);
-            font-weight: 900;
-            color: white;
-            letter-spacing: 5px;
-            text-transform: uppercase;
-            position: relative;
-            display: inline-block;
-            animation: glitch 3s infinite;
-        }
-
-        @keyframes glitch {
-            0% { text-shadow: 2px 0 var(--primary), -2px 0 #ff00c1; }
-            2% { text-shadow: 5px 0 var(--primary), -5px 0 #ff00c1; }
-            4% { text-shadow: 2px 0 var(--primary), -2px 0 #ff00c1; }
-            100% { text-shadow: 2px 0 var(--primary), -2px 0 #ff00c1; }
-        }
-
-        .tag {
-            opacity: 0.8;
-            font-size: 0.9rem;
-            letter-spacing: 2px;
-            margin-top: 10px;
-            color: var(--primary);
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .section-title {
-            font-family: 'Orbitron', sans-serif;
-            text-align: left;
-            border-left: 4px solid var(--primary);
-            padding-left: 15px;
-            margin-bottom: 30px;
-        }
-
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
-            padding: 20px 0;
-        }
-
-        .card {
-            background: var(--card-bg);
-            border: 1px solid rgba(255,255,255,0.1);
-            border-radius: 20px;
-            padding: 30px;
-            position: relative;
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            backdrop-filter: blur(10px);
-            overflow: hidden;
-            text-align: left;
-        }
-
-        .card:hover {
-            transform: translateY(-10px) scale(1.02);
-            border-color: var(--primary);
-            box-shadow: 0 0 30px rgba(56, 189, 248, 0.3);
-        }
-
-        /* Specific style for GrossDumpster */
-        .card.featured {
-            border: 1px solid var(--hazard);
-        }
-        .card.featured:hover {
-            box-shadow: 0 0 30px rgba(245, 158, 11, 0.3);
-            border-color: var(--hazard);
-        }
-
-        .card h3 {
-            font-family: 'Orbitron', sans-serif;
-            margin-top: 0;
-            color: var(--primary);
-        }
-
-        .card p {
-            font-size: 0.95rem;
-            line-height: 1.6;
-            color: #94a3b8;
-        }
-
-        .btn {
-            background: white;
-            color: black;
-            border: none;
-            padding: 12px 24px;
-            border-radius: 8px;
-            font-family: 'Orbitron', sans-serif;
-            font-weight: bold;
-            font-size: 0.8rem;
-            cursor: pointer;
-            transition: 0.3s;
-            text-transform: uppercase;
-            width: 100%;
-            margin-top: 15px;
-        }
-
-        .btn:hover {
-            background: var(--primary);
-            color: white;
-            box-shadow: 0 0 15px var(--primary);
-        }
-
-        .btn-featured {
-            background: var(--hazard);
-            color: black;
-        }
-
-        .fakeTweet {
-            font-size: 0.8rem;
-            background: rgba(0,0,0,0.3);
-            padding: 10px;
-            border-radius: 8px;
-            margin-top: 15px;
-            border-left: 2px solid #38bdf8;
-            font-style: italic;
-        }
-
-        /* Intro Animation Overhaul */
+        /* --- Refined Startup Screen --- */
         #dixlabsIntro {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
             background: #000;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             z-index: 99999;
+            transition: opacity 0.8s ease;
         }
 
         #dixlabsLogo {
-            width: 180px;
-            filter: drop-shadow(0 0 20px var(--primary));
-            animation: introAnim 2.5s ease-in-out forwards;
+            width: 200px;
+            filter: drop-shadow(0 0 15px var(--primary));
+            animation: bootUp 2.5s cubic-bezier(0.15, 0, 0.15, 1) forwards;
         }
 
-        @keyframes introAnim {
-            0% { opacity: 0; transform: scale(0.8) rotate(-5deg); filter: blur(20px); }
-            50% { opacity: 1; transform: scale(1.1) rotate(0deg); filter: blur(0px); }
-            100% { opacity: 0; transform: scale(1.2); filter: blur(10px); }
+        .loading-bar {
+            width: 150px;
+            height: 2px;
+            background: rgba(255,255,255,0.1);
+            margin-top: 20px;
+            position: relative;
+            overflow: hidden;
         }
 
-        footer {
-            padding: 60px 20px;
+        .loading-bar::after {
+            content: "";
+            position: absolute;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: var(--primary);
+            animation: loadProgress 2s ease forwards;
+        }
+
+        @keyframes bootUp {
+            0% { opacity: 0; transform: scale(0.5); filter: brightness(0) blur(10px); }
+            20% { opacity: 1; transform: scale(1.05); filter: brightness(2) blur(0px); }
+            30% { transform: scale(1) translate(2px, -2px); }
+            32% { transform: scale(1) translate(-2px, 2px); }
+            34% { transform: scale(1) translate(0, 0); }
+            80% { opacity: 1; transform: scale(1); }
+            100% { opacity: 0; transform: scale(1.2); filter: blur(5px); }
+        }
+
+        @keyframes loadProgress {
+            0% { left: -100%; }
+            100% { left: 0%; }
+        }
+
+        /* --- Main UI --- */
+        header { padding: 80px 20px 40px; text-align: center; }
+        
+        .logo {
             font-family: 'Orbitron', sans-serif;
-            font-size: 0.7rem;
-            letter-spacing: 4px;
-            text-transform: uppercase;
-            opacity: 0.4;
+            font-size: clamp(2rem, 8vw, 3.5rem);
+            color: white;
+            text-shadow: 0 0 10px var(--primary);
+            letter-spacing: 8px;
+            animation: pulse 4s infinite;
         }
+
+        .container { max-width: 1100px; margin: 0 auto; padding: 20px; }
+
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 25px;
+        }
+
+        .card {
+            background: var(--card-bg);
+            border: 1px solid rgba(255,255,255,0.05);
+            border-radius: 16px;
+            padding: 30px;
+            transition: 0.3s;
+            backdrop-filter: blur(12px);
+            cursor: pointer;
+        }
+
+        .card:hover {
+            transform: translateY(-8px);
+            border-color: var(--primary);
+            background: rgba(56, 189, 248, 0.05);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+
+        .btn {
+            background: var(--primary);
+            color: #000;
+            border: none;
+            padding: 12px 20px;
+            border-radius: 8px;
+            font-family: 'Orbitron', sans-serif;
+            font-weight: bold;
+            width: 100%;
+            margin-top: 15px;
+            cursor: pointer;
+        }
+
+        footer { padding: 40px; text-align: center; opacity: 0.3; font-size: 0.8rem; }
     </style>
 </head>
 
-<body>
+<body onclick="initAudio()">
 
 <div id="dixlabsIntro">
     <img src="logo.png" id="dixlabsLogo" alt="Dixit Labs">
+    <div class="loading-bar"></div>
 </div>
 
 <header>
     <div class="logo">DIXIT LABS</div>
-    <p class="tag">EST. 2024 // ATHARV DIXIT // STUDENT DEVELOPER 🇮🇳</p>
+    <p style="color: var(--primary); letter-spacing: 2px; font-size: 0.8rem;">[ STUDENT DEVELOPER // INDIA ]</p>
 </header>
 
 <div class="container">
-    
-    <div class="section-title">
-        <h2>MISSION_LOG</h2>
-    </div>
-    <div style="text-align: left; max-width: 600px; margin-bottom: 50px;">
-        <p style="color: #94a3b8; font-size: 1.1rem;">
-            Hello Player 1. I'm <strong>Atharv Dixit</strong>. I craft chaotic browser experiences, 
-            interactive experiments, and digital junk. Welcome to my laboratory.
-        </p>
-    </div>
-
-    <div class="section-title">
-        <h2>ACTIVE_PROJECTS</h2>
-    </div>
-
     <div class="projects-grid">
-        <div class="card">
-            <h3>💸 Spend Mukesh's Money</h3>
-            <p>You have billions. The world has stuff. Can you actually spend it all or will the interest beat you?</p>
-            <div class="fakeTweet">
-                @startupbro: "I bought 3 islands and still had money left 😭"
-            </div>
-            <button class="btn" onclick="location.href='ambani.html'">Initialize Game</button>
+        <div class="card" onmouseenter="playHover()" onclick="location.href='ambani.html'">
+            <h3 style="font-family: 'Orbitron';">💸 Spend Mukesh's Money</h3>
+            <p style="color: #94a3b8;">Can you drain the vault before the market recovers?</p>
+            <button class="btn">INITIALIZE</button>
         </div>
 
-        <div class="card featured">
-            <h3 style="color: var(--hazard);">🗑️ GrossDumpster</h3>
-            <p>The ultimate physics-based trash catching simulator. Fast-paced, addictive, and slightly unhygienic.</p>
-            <button class="btn btn-featured" onclick="window.location.href='https://grossdumpster.vercel.app'">Launch Site</button>
+        <div class="card" onmouseenter="playHover()" onclick="window.location.href='https://grossdumpster.vercel.app'">
+            <h3 style="font-family: 'Orbitron'; color: var(--hazard);">🗑️ GrossDumpster</h3>
+            <p style="color: #94a3b8;">High-speed physics-based trash containment simulator.</p>
+            <button class="btn" style="background: var(--hazard);">LAUNCH_CORE</button>
         </div>
 
-        <div class="card" style="opacity: 0.8; border-style: dashed;">
-            <h3>👀 Next Experiment</h3>
-            <p>Something chaotic is cooking in the labs. A new interactive project is currently under construction.</p>
-            <button class="btn" style="background: transparent; color: white; border: 1px solid white;" onclick="alert('Coming Soon 👀 Stay Tuned!')">SYSTEM_ENCRYPTED</button>
+        <div class="card" onmouseenter="playHover()">
+            <h3 style="font-family: 'Orbitron';">👀 Experiment 003</h3>
+            <p style="color: #64748b;">Classified data. Interactive chaos incoming.</p>
+            <button class="btn" style="background: #334155; color: #94a3b8;">ENCRYPTED</button>
         </div>
     </div>
-
 </div>
 
-<footer>
-    © 2026 DIXIT LABS — ALL RIGHTS RESERVED
-</footer>
+<footer>© 2026 DIXIT LABS // ALL SYSTEMS OPERATIONAL</footer>
 
 <script>
+    const hoverSfx = new Audio('https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3');
+    const startSfx = new Audio('https://assets.mixkit.co/active_storage/sfx/2568/2568-preview.mp3');
+    hoverSfx.volume = 0.2;
+    startSfx.volume = 0.4;
+
+    let audioInitialized = false;
+
+    function initAudio() {
+        if (!audioInitialized) {
+            startSfx.play();
+            audioInitialized = true;
+        }
+    }
+
+    function playHover() {
+        hoverSfx.currentTime = 0;
+        hoverSfx.play().catch(()=>{});
+    }
+
+    // Handle Startup Fade
     setTimeout(() => {
-        document.getElementById("dixlabsIntro").style.opacity = "0";
-        setTimeout(() => {
-            document.getElementById("dixlabsIntro").style.display = "none";
-        }, 500);
-    }, 2500);
+        const intro = document.getElementById("dixlabsIntro");
+        intro.style.opacity = "0";
+        setTimeout(() => { intro.style.display = "none"; }, 800);
+    }, 2800);
 </script>
 
 </body>
