--- a/ambani.html
+++ b/ambani.html
@@ -1,266 +1,292 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Spend Mukesh Ambani's Money</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ambani Wealth Simulator | Dixit Labs</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
 
-<style>
+    <style>
+        :root {
+            --bg: #020617;
+            --card-bg: rgba(30, 41, 59, 0.7);
+            --primary: #22c55e;
+            --accent: #38bdf8;
+            --danger: #ef4444;
+        }
 
-body{
-font-family:Arial;
-background:#0f172a;
-color:white;
-margin:0;
-text-align:center;
-}
+        body {
+            font-family: 'Inter', sans-serif;
+            background: var(--bg);
+            background-image: radial-gradient(circle at 50% 0%, #1e293b 0%, #020617 100%);
+            color: white;
+            margin: 0;
+            overflow-x: hidden;
+        }
 
-header{
-background:#111827;
-padding:20px;
-font-size:30px;
-font-weight:bold;
-}
+        header {
+            background: rgba(15, 23, 42, 0.8);
+            backdrop-filter: blur(10px);
+            padding: 30px;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+        }
 
-.money{
-font-size:35px;
-margin:20px;
-color:#22c55e;
-}
+        h1 {
+            font-family: 'Orbitron', sans-serif;
+            margin: 0;
+            font-size: 1.5rem;
+            letter-spacing: 2px;
+            color: var(--accent);
+        }
 
-.container{
-display:flex;
-flex-wrap:wrap;
-justify-content:center;
-gap:15px;
-padding:20px;
-}
+        .money-sticky {
+            font-family: 'Orbitron', sans-serif;
+            font-size: clamp(1.5rem, 5vw, 3rem);
+            color: var(--primary);
+            text-shadow: 0 0 20px rgba(34, 197, 94, 0.3);
+            margin: 10px 0;
+        }
 
-.card{
+        .progress-container {
+            width: 100%;
+            height: 6px;
+            background: #111827;
+            border-radius: 10px;
+            margin-top: 15px;
+            overflow: hidden;
+        }
 
-background:#1f2937;
-padding:15px;
-width:230px;
-border-radius:12px;
+        #progress-bar {
+            width: 0%;
+            height: 100%;
+            background: linear-gradient(90deg, var(--primary), var(--accent));
+            transition: 0.5s ease;
+        }
 
-}
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+            padding: 40px 20px;
+            max-width: 1400px;
+            margin: 0 auto;
+        }
 
-button{
+        .card {
+            background: var(--card-bg);
+            border: 1px solid rgba(255,255,255,0.05);
+            border-radius: 20px;
+            padding: 25px;
+            text-align: center;
+            transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            backdrop-filter: blur(5px);
+        }
 
-padding:8px 10px;
-margin:5px;
-border:none;
-border-radius:6px;
-cursor:pointer;
-font-weight:bold;
+        .card:hover {
+            transform: translateY(-10px);
+            border-color: var(--accent);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
 
-}
+        .card-icon {
+            font-size: 3.5rem;
+            margin-bottom: 15px;
+            display: block;
+        }
 
-.buy{background:#22c55e;}
-.sell{background:#ef4444;color:white;}
+        .card h3 {
+            font-family: 'Orbitron', sans-serif;
+            margin: 10px 0;
+            font-size: 1.1rem;
+        }
 
-#tweets{
+        .price {
+            color: var(--accent);
+            font-weight: bold;
+            font-size: 1.2rem;
+            margin-bottom: 20px;
+        }
 
-background:#020617;
-padding:20px;
-margin-top:20px;
-height:220px;
-overflow:auto;
-text-align:left;
+        .controls {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+        }
 
-}
+        button {
+            padding: 12px;
+            border: none;
+            border-radius: 10px;
+            font-family: 'Orbitron', sans-serif;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.2s;
+            text-transform: uppercase;
+            font-size: 0.8rem;
+        }
 
-.tweet{
+        button:active { transform: scale(0.9); }
 
-background:#111827;
-margin:10px;
-padding:10px;
-border-radius:8px;
+        .buy { background: var(--primary); color: #064e3b; }
+        .buy:hover { background: #4ade80; box-shadow: 0 0 15px var(--primary); }
 
-}
+        .sell { background: rgba(239, 68, 68, 0.1); color: var(--danger); border: 1px solid var(--danger); }
+        .sell:hover { background: var(--danger); color: white; }
 
-</style>
+        .qty-badge {
+            background: #0f172a;
+            padding: 5px 15px;
+            border-radius: 20px;
+            font-size: 0.8rem;
+            margin-bottom: 15px;
+            display: inline-block;
+            border: 1px solid rgba(255,255,255,0.1);
+        }
 
+        #twitter-section {
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 20px;
+        }
+
+        #tweets {
+            background: #020617;
+            border-radius: 20px;
+            height: 300px;
+            overflow-y: auto;
+            padding: 20px;
+            border: 1px solid rgba(255,255,255,0.05);
+            mask-image: linear-gradient(to bottom, black 80%, transparent 100%);
+        }
+
+        .tweet {
+            background: #111827;
+            margin-bottom: 12px;
+            padding: 15px;
+            border-radius: 12px;
+            border-left: 4px solid var(--accent);
+            animation: slideIn 0.3s ease-out;
+            text-align: left;
+            font-size: 0.9rem;
+        }
+
+        @keyframes slideIn {
+            from { opacity: 0; transform: translateX(-20px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-thumb { background: var(--accent); border-radius: 10px; }
+    </style>
 </head>
-
 <body>
 
 <header>
-
-Spend Mukesh Ambani's Money 💸
-
+    <h1>DIXIT LABS: WEALTH_SIMULATOR</h1>
+    <div class="money-sticky">₹ <span id="money">0</span></div>
+    <div style="font-size: 0.8rem; opacity: 0.6; font-family: 'Orbitron';">REMAINING FORTUNE</div>
+    <div class="progress-container">
+        <div id="progress-bar"></div>
+    </div>
 </header>
 
-<div class="money">
+<div class="container" id="shop"></div>
 
-₹ <span id="money"></span>
-
+<div id="twitter-section">
+    <h2 style="font-family: 'Orbitron'; font-size: 1rem; color: var(--accent); text-align: left; margin-left: 20px;">
+        LIVE FEED: BILLIONAIRE REACTIONS
+    </h2>
+    <div id="tweets"></div>
 </div>
-
-
-<div class="container" id="shop">
-
-</div>
-
-
-<h2>🧵 Billionaire Twitter Reactions</h2>
-
-<div id="tweets">
-
-</div>
-
 
 <script>
-
-
-let money = 900000000000000; // 90 lakh crore vibes 😂
-
-document.getElementById("money").innerText =
-money.toLocaleString();
-
-
-const tweets=[
-
-"Elon Musk: Bro just bought WHAT 💀",
-"Jeff Bezos: That's more deliveries than Amazon Prime.",
-"Bill Gates: Maybe donate some? Just saying.",
-"Random Crypto Guy: Should've bought Bitcoin instead.",
-"Shark Tank Judge: I'm out.",
-"Finance Guru: This is NOT passive income behaviour.",
-"Stock Market Uncle: Beta SIP karo.",
-"Twitter CEO: We're limiting your spending for safety.",
-"Economist: Inflation just increased 2%. Congrats.",
-"CA Friend: GST bhi lagega bhai."
-
-];
-
-
-function postTweet(text){
-
-let box=document.getElementById("tweets");
-
-let div=document.createElement("div");
-
-div.className="tweet";
-
-div.innerText=text;
-
-box.prepend(div);
-
-}
-
-
-const items=[
-
-{name:"Candy",price:2},
-{name:"Samosa",price:20},
-{name:"Ice Cream",price:60},
-{name:"Movie Ticket",price:250},
-{name:"Gaming Mouse",price:2500},
-{name:"Phone",price:80000},
-{name:"Gaming PC",price:250000},
-{name:"Bike",price:200000},
-{name:"Car",price:1500000},
-{name:"Luxury Watch",price:5000000},
-{name:"Diamond Ring",price:25000000},
-{name:"Lamborghini",price:50000000},
-{name:"Private Helicopter",price:800000000},
-{name:"Penthouse",price:2000000000},
-{name:"Private Jet",price:6000000000},
-{name:"IPL Team",price:75000000000},
-{name:"Space Rocket",price:400000000000},
-{name:"Satellite Network",price:900000000000},
-{name:"Small Country Debt",price:5000000000000},
-{name:"Moon Colony",price:12000000000000},
-{name:"Mars Base",price:20000000000000}
-
-];
-
-
-const shop=document.getElementById("shop");
-
-
-items.forEach(item=>{
-
-let qty=0;
-
-let div=document.createElement("div");
-
-div.className="card";
-
-
-div.innerHTML=`
-
-<h3>${item.name}</h3>
-
-<p>₹ ${item.price.toLocaleString()}</p>
-
-<p id="qty${item.name}">Owned : 0</p>
-
-<button class="buy">Buy</button>
-
-<button class="sell">Sell</button>
-
-`;
-
-let buy=div.querySelector(".buy");
-
-let sell=div.querySelector(".sell");
-
-
-buy.onclick=()=>{
-
-if(money>=item.price){
-
-money-=item.price;
-
-qty++;
-
-update();
-
-postTweet(
-tweets[Math.floor(Math.random()*tweets.length)]
-);
-
-}
-
-};
-
-
-sell.onclick=()=>{
-
-if(qty>0){
-
-qty--;
-
-money+=item.price;
-
-update();
-
-}
-
-};
-
-
-function update(){
-
-document.getElementById("money").innerText=
-money.toLocaleString();
-
-document.getElementById(
-"qty"+item.name
-).innerText="Owned : "+qty;
-
-}
-
-
-shop.appendChild(div);
-
-});
-
-
-</script>
-
-
-</body>
-
-</html>
+    let initialMoney = 900000000000000;
+    let money = 900000000000000;
+
+    // SFX Assets
+    const buySfx = new Audio('https://assets.mixkit.co/active_storage/sfx/1770/1770-preview.mp3'); 
+    const errorSfx = new Audio('https://assets.mixkit.co/active_storage/sfx/2539/2539-preview.mp3');
+    buySfx.volume = 0.3;
+
+    const items = [
+        {name:"Candy", price:2, icon:"🍬"},
+        {name:"Samosa", price:20, icon:"🥟"},
+        {name:"Ice Cream", price:60, icon:"🍦"},
+        {name:"Movie Ticket", price:250, icon:"🎬"},
+        {name:"Gaming Mouse", price:2500, icon:"🖱️"},
+        {name:"Phone", price:80000, icon:"📱"},
+        {name:"Gaming PC", price:250000, icon:"🖥️"},
+        {name:"Luxury Bike", price:1200000, icon:"🏍️"},
+        {name:"Supercar", price:45000000, icon:"🏎️"},
+        {name:"Luxury Watch", price:5000000, icon:"⌚"},
+        {name:"Diamond Ring", price:25000000, icon:"💎"},
+        {name:"Private Helicopter", price:800000000, icon:"🚁"},
+        {name:"Antilia 2.0", price:15000000000, icon:"🏰"},
+        {name:"Private Jet", price:6000000000, icon:"🛩️"},
+        {name:"IPL Team", price:75000000000, icon:"🏏"},
+        {name:"Space Rocket", price:400000000000, icon:"🚀"},
+        {name:"Satellite Network", price:900000000000, icon:"🛰️"},
+        {name:"Small Country Debt", price:5000000000000, icon:"🌎"},
+        {name:"Moon Colony", price:12000000000000, icon:"🌙"},
+        {name:"Mars Base", price:20000000000000, icon:"🔴"}
+    ];
+
+    const tweets = [
+        "Elon Musk: Bro just bought WHAT 💀",
+        "Jeff Bezos: That's more deliveries than Amazon Prime.",
+        "Bill Gates: Maybe donate some? Just saying.",
+        "Finance Guru: This is NOT passive income behavior.",
+        "Stock Market Uncle: Beta, gold khareedo.",
+        "Economist: Inflation just went up 4% because of you.",
+        "CA Friend: Bhai GST ka bill sambhal ke rakhna.",
+        "Random Crypto Guy: Could've bought the dip instead.",
+        "Shark Tank Judge: And for that reason, I'm out."
+    ];
+
+    function updateUI() {
+        document.getElementById("money").innerText = money.toLocaleString('en-IN');
+        let spent = initialMoney - money;
+        let percentage = (spent / initialMoney) * 100;
+        document.getElementById("progress-bar").style.width = percentage + "%";
+    }
+
+    function postTweet(text) {
+        let box = document.getElementById("tweets");
+        let div = document.createElement("div");
+        div.className = "tweet";
+        div.innerHTML = `<strong>@GlobalNews</strong>: ${text}`;
+        box.prepend(div);
+        if (box.children.length > 20) box.lastChild.remove();
+    }
+
+    const shop = document.getElementById("shop");
+
+    items.forEach(item => {
+        let qty = 0;
+        let card = document.createElement("div");
+        card.className = "card";
+        card.innerHTML = `
+            <span class="card-icon">${item.icon}</span>
+            <div class="qty-badge" id="qty${item.name}">Owned: 0</div>
+            <h3>${item.name}</h3>
+            <p class="price">₹${item.price.toLocaleString('en-IN')}</p>
+            <div class="controls">
+                <button class="buy">Buy</button>
+                <button class="sell">Sell</button>
+            </div>
+        `;
+
+        let buyBtn = card.querySelector(".buy");
+        let sellBtn = card.querySelector(".sell");
+
+        buyBtn.onclick = () => {
+            if(money >= item.price) {
+                money -= item.price;
+                qty++;
+                buySfx.currentTime = 0;
+                buySfx.play().catch(()=>{});
+                updateItemUI();
+                if(Math.random() > 0.7) postTweet(tweets[Math.floor(Math.random()*tweets.length)]);
